--- a/scratch/041825-HP_diversity_analysis.Rmd
+++ b/scratch/041825-HP_diversity_analysis.Rmd
@@ -16,6 +16,8 @@ library(readr)
 library(ggrepel)
 
 library("phyloseq")
+library(rstatix)
+library(cowplot)
 ```
 
 
@@ -24,6 +26,7 @@ library("phyloseq")
 ### Load in the Household Project dataset
 
 ```{r}
+
 household_data <- read.table("C:/Users/anaes/OneDrive/UCI_Spring25/rotation/e0026-e0029-e0030.txt", header = TRUE)
 
 # Divide dataset into separate tables by experiment. Filter out unnecessary columns
@@ -55,6 +58,10 @@ e0026_day64 <- e0026_clean %>%  filter(str_detect(biosample1, "064")) %>%
 mutate(day = "064")
 
 
+# Specify output directory
+
+OUTPUTDIR <- "./outputs"
+
 ```
 
 
@@ -62,13 +69,12 @@ mutate(day = "064")
 
 
 ```{r}
+
 data <- readRDS("../data/ps_all.rds")
 
 hp_data_clean <- prune_taxa(taxa_sums(data) > 0, data)
 
 e0026_obj <- subset_samples(hp_data_clean, experiment == "e0026")
-
-OUTDIR <- "./"
 
 ```
 
@@ -138,9 +144,9 @@ OUTDIR <- "./"
 
 
 
-```{r}
+### Define a function to extract passage information from raw sample ID
 
-# Define a function to extract passage information from raw sample ID
+```{r}
 
 extract_passage <- function(x) {
   ifelse(
@@ -153,7 +159,7 @@ extract_passage <- function(x) {
 ```
 
 
-### Change in Alpha Diversity through Time
+### Plot change in Alpha Diversity over Time
 
 ```{r}
 
@@ -231,44 +237,77 @@ alpha_time <- ggplot(
     axis.text.x = element_text(angle = 45, hjust = 1)
   )
 
-alpha_time
+# alpha_time
+# 
+# ggsave("alpha_time.png", width = 14, height = 12, dpi = 300, bg = "white")
 
-ggsave("alpha_time.png", width = 14, height = 12, dpi = 300, bg = "white")
+# Save the plot
+windows(width = 14, height = 12)
+print(alpha_time)
+savePlot(file.path(OUTPUTDIR, "alpha_time.png"), type = "png", device = dev.cur())
+
 ```
+
+
 
 ### Test Significance
 
 ```{r}
 
-# Significance of antibiotic on the entire data
+# These are all the possible combinations where they vary by one value.
 
-wilcox.test(Shannon ~ antibiotic, data = e0026_alpha)
+  valid_comparisons <- c("No_001 vs No_029", "No_001 vs No_036", "No_001 vs No_064", "No_001 vs Yes_001", "No_029 vs No_036", "No_029 vs No_064", "No_029 vs Yes_029","No_036 vs No_064", "No_036 vs Yes_036", "No_064 vs Yes_064", "Yes_001 vs Yes_029", "Yes_001 vs Yes_036", "Yes_001 vs Yes_064", "Yes_029 vs Yes_036", "Yes_029 vs Yes_064", "Yes_036 vs Yes_064")
+  
+# These are the ones I considered to be meaningful comparisons, but I'm actually really not sure
+
+  valid_comparisons_2 <- c("No_001 vs No_029", "No_001 vs No_036", "No_001 vs No_064", "No_001 vs Yes_001", "No_029 vs No_036", "No_029 vs No_064", "No_029 vs Yes_029", "No_036 vs Yes_036", "No_064 vs Yes_064", "Yes_001 vs Yes_029", "Yes_001 vs Yes_036", "Yes_001 vs Yes_064", "Yes_029 vs Yes_036", "Yes_029 vs Yes_064", "Yes_036 vs Yes_064")
 
 
-# Significant of antibiotic on diversity by day
+left_join(e0026_alpha %>%
+  mutate(abxDay=paste0(antibiotic,"_",day)) %>%
+  wilcox_test(Shannon~abxDay),
+  e0026_alpha %>%
+  mutate(abxDay=paste0(antibiotic,"_",day)) %>%
+  wilcox_effsize(Shannon~abxDay),
+  by=c(".y.","group1","group2","n1","n2")) %>%
+  mutate(comparison=paste0(gsub("\n"," ",group1), " vs ", gsub("\n"," ",group2)),
+     	summary=paste0("Wilcoxon rank-sum two-sided test, ", comparison, ": n=", n1+n2,
+                    	", r=", round(effsize,2), ", p=", p, ", adjusted p-value=", p.adj, ", ", p.adj.signif,
+                    	", custom adjusted p-value=", 15*p, " (number of groups: 15)")) %>% 
+  filter(comparison %in% valid_comparisons_2)
 
-wilcox_results_by_day <- e0026_alpha %>%
-  group_split(day) %>%
-  map_df(~{
-    data <- .
-    result <- wilcox.test(Shannon ~ antibiotic, data = data)
-    tibble(
-      day = unique(data$day),
-      p_value = result$p.value
-    )
-  })
 
-wilcox_results_by_day
+# # Perform Wilcoxon rank-sum tests to investigate the significance of the
+# # fold-changes in absolute abundance after antibiotic perturbation.
+# # Now perform these tests for each pair of subject responses.
+# statsTemp <- left_join(dataAbsAbundance %>% ungroup() %>%
+#                      	mutate(subjectResponseInterval=paste0(subjectResponse, "_", intervalLong)) %>%
+#                      	wilcox_test(log10FoldChangeFromPreAbx~subjectResponseInterval),
+#                    	dataAbsAbundance %>% ungroup() %>%
+#                      	mutate(subjectResponseInterval=paste0(subjectResponse, "_", intervalLong)) %>%
+#                      	wilcox_effsize(log10FoldChangeFromPreAbx~subjectResponseInterval), by=c(".y.","group1","group2","n1","n2")) %>%
+#   mutate(comparison=paste0(gsub("\n"," ",group1), " vs ", gsub("\n"," ",group2)),
+#      	summary=paste0("Wilcoxon rank-sum two-sided test, ", comparison, ": n=", n1+n2,
+#                     	", r=", round(effsize,2), ", p=", p, ", adjusted p-value=", p.adj, ", ", p.adj.signif,
+#                     	", custom adjusted p-value=", 9*p, " (number of groups: 9)")) %>%
+#   separate(group1, into=c("subjectResponse1", "interval1"), sep="_") %>%
+#   separate(group2, into=c("subjectResponse2", "interval2"), sep="_") %>%
+#   filter((subjectResponse1=="control" | subjectResponse2=="control") |
+#        	(subjectResponse1!=subjectResponse2 & interval1==interval2))
+# write(c("Compare fold-change in absolute abundance between transient and lasting responders at each time interval.",
+#     	statsTemp$summary, ""), file=paste0(OUTDIR, "fig1.txt"), sep="\n", append=TRUE)
 
+  
 
 ```
 
 
 
 
-### Change in Beta Diversity through Time
+### JSD between communities of day 1&29 versus JSD of communities of day 29&36
 
-```{r}
+
+```{r, warning=FALSE}
 
 combined_data <- bind_rows(e0026_day1, e0026_day29, e0026_day36, e0026_day64)
 
@@ -281,29 +320,7 @@ beta_diversity_wide <- beta_diversity %>%
   select(sample1, sample2, method, value) %>%
   pivot_wider(names_from = method, values_from = value)
 
-# # Left join by sample1 ID, rename to sample1's variable
-# e0026_beta_1 <- beta_diversity_wide %>%
-#   left_join(combined_data, by = c("sample1" = "sample")) %>%
-#   dplyr::rename(
-#     day1 = day,
-#     subject1 = subject,
-#     antibiotic1 = antibiotic
-#   )
-# 
-# e0026_beta_1 %>%
-#   select(sample1, day, subject, antibiotic) %>%
-#   head()
-
-
-# # Left join again by sample2 ID and rename to sample2's variables
-# e0026_beta_2 <- e0026_beta_1 %>% 
-#   left_join(combined_data, by = c("sample2" = "sample")) %>% 
-#   dplyr::rename("day" = "day2", "subject" = "subject2", "antibiotic" = "antibiotic2") %>% 
-#   mutate(passage1 = extract_passage(sample1),
-#          passage2 = extract_passage(sample2))
-
 ```
-
 
 
 
@@ -362,17 +379,42 @@ e0026_beta <- e0026_beta %>%
 ```
 
 
-One plot I could make is a box plot of the JSD between communities from the same subject at day 1 and 29, versus the JSD between communities from the same subject at days 29 and 36.
-The question that this is answering: how much of an impact does the antibiotic have on community composition, compared to the normal level of variation that we see in the absence of antibiotics
+### Test significance
+
 
 ```{r}
-
-# Filter for only day combinations of interest. Maybe make a new column that has the combinations and from there decide which ones to keep.
+# Filter for day combinations of interest. Maybe make a new column that has the combinations and from there decide which ones to keep.
 
 e0026_beta_clean <- e0026_beta %>%
   mutate(day_pair = paste(day1, day2, sep = "_")) %>% 
-  filter(subject1 == subject2 & day1 != day2 & passage1 == 8 & passage2 == 8 & day_pair %in% c("001_029", "029_036"))
+  filter(subject1 == subject2 & day1 != day2 & passage1 == 8 & passage2 == 8)
+  
+# Only consider day subject A samples as day 2
+e0026_beta_clean <- 
+  e0026_beta_clean %>% 
+  filter(antibiotic1 == 1)
 
+# Perform statistical test by looking at significance between day pairs
+
+left_join(e0026_beta_clean %>%
+  # mutate(abxDay=paste0(antibiotic,"_",day)) %>%
+  wilcox_test(jsd~day_pair),
+  e0026_beta_clean %>%
+  # mutate(abxDay=paste0(antibiotic,"_",day)) %>%
+  wilcox_effsize(jsd~day_pair),
+  by=c(".y.","group1","group2","n1","n2")) %>%
+  mutate(comparison=paste0(gsub("\n"," ",group1), " vs ", gsub("\n"," ",group2)),
+     	summary=paste0("Wilcoxon rank-sum two-sided test, ", comparison, ": n=", n1+n2,
+                    	", r=", round(effsize,2), ", p=", p, ", adjusted p-value=", p.adj, ", ", p.adj.signif, ", custom adjusted p-value=", 4*p, " (number of groups: 4)"))
+
+```
+
+
+
+
+### Plot
+
+```{r}
 
 beta_time <- ggplot(
   e0026_beta_clean,
@@ -393,7 +435,7 @@ beta_time <- ggplot(
   alpha = 0.8
 )+
   labs(
-    title = "Divergence Across Samples Pre and Post Abx",
+    title = "Divergence Across Samples Non-Abx Subjects",
     x = "Day Pair",
     y = "Jensen-Shannon Divergence"
   )  +
@@ -403,31 +445,41 @@ beta_time <- ggplot(
     axis.text.x = element_text(angle = 45, hjust = 1)
   )
 
-beta_time
 
-ggsave("beta_time.png", width = 14, height = 12, dpi = 300, bg = "white")
+
+# Save the plot
+windows(width = 14, height = 12)
+print(beta_time)
+savePlot(file.path(OUTPUTDIR, "beta_time.png"), type = "png", device = dev.cur())
 
 ```
 
 
 
-
-Compare the average distance (i.e. JSD) between two in vivo communities (passage 0), compared to two in vitro communities (passage 8).
-
+### JSD between in vivo and in vitro communities (passage 0 vs. passage 8)
 
 ```{r}
 
-# Extract passage number (0 or 8)
+# Filter for values passage numbers and day 29 samples only
 
 jsd_p0p8 <- e0026_beta %>%
-  filter(!is.na(passage1), !is.na(passage2), passage1 == passage2, day1 == "029", day2 == "029")
-  
-```
+  filter(!is.na(passage1), !is.na(passage2), day1 == "029", day2 == "029")
 
+# Perform statistical test by looking at significance between passage pairs
 
+left_join(jsd_p0p8 %>%
+  mutate(combo=paste0(passage1,"_",passage2)) %>%
+  wilcox_test(jsd~combo),
+  jsd_p0p8 %>%
+  mutate(combo=paste0(passage1,"_",passage2)) %>%
+  wilcox_effsize(jsd~combo),
+  by=c(".y.","group1","group2","n1","n2")) %>%
+  mutate(comparison=paste0(gsub("\n"," ",group1), " vs ", gsub("\n"," ",group2)),
+     	summary=paste0("Wilcoxon rank-sum two-sided test, ", comparison, ": n=", n1+n2,
+                    	", r=", round(effsize,2), ", p=", p, ", adjusted p-value=", p.adj, ", ", p.adj.signif, ", custom adjusted p-value=", 4*p, " (number of groups: 4)"))
 
-
-```{r}
+jsd_p0p8<- jsd_p0p8 %>% 
+  filter(passage1 == passage2)
 
 jsd_p0p8_plot <- ggplot(jsd_p0p8, aes(x = factor(passage1), y = jsd, fill = factor(passage1))) +
   geom_boxplot(width = 0.6, alpha = 0.85) +
@@ -441,9 +493,11 @@ jsd_p0p8_plot <- ggplot(jsd_p0p8, aes(x = factor(passage1), y = jsd, fill = fact
   theme(legend.position = "none")
 
 
-jsd_p0p8_plot
 
-ggsave("jsd_p0p8_plot.png", width = 14, height = 12, dpi = 300, bg = "white")
+# Save the plot
+windows(width = 14, height = 12)
+print(jsd_p0p8_plot)
+savePlot(file.path(OUTPUTDIR, "jsd_p0p8_plot.png"), type = "png", device = dev.cur())
 
 ```
 
