--- a/scratch/050525_e0029_initial_analysis.Rmd
+++ b/scratch/050525_e0029_initial_analysis.Rmd
@@ -99,14 +99,15 @@ ggsave(
 
 ```{r}
 
-# First get only the biosamples corresponding to actual mixtures
+# First get only the biosamples corresponding to actual mixtures. For blanks, only get the first well of the duplicates
 composition_across_mixes <- e0029 %>%
-  # filter(!is.na(relAbundance)) %>%
-  group_by(biosample1, replicate) %>%  # flip group structure
+  filter(!(biosample2 == "blank") | (biosample2 == "blank" & well %in% c("A11", "C11", "E11", "G11")) | (biosample1 == "blank" & well %in% "G12")) %>%
+  group_by(biosample1, replicate) %>%
   mutate(
-    biosample2 = factor(biosample2, levels = unique(biosample2))  # set local order within group
+    biosample2 = factor(biosample2, levels = unique(biosample2))
   ) %>%
   ungroup()
+
 
 # Why do the blank mixtures have an so many more observations?
 composition_across_mixes %>%
@@ -175,8 +176,6 @@ e0026_colonization <- e0026 %>%
 **Get mixture ASVs**
 
 ```{r}
-
-
   
 # Replicate 1
 mixture_ASVs_rep1 <- e0029_colonization %>%
@@ -240,14 +239,60 @@ donor_communities <- e0029_colonization %>%
   pull(biosample2) %>%
   unique()
 
-# Replicate 1
-donor_ASVs_rep1 <- e0026_colonization %>% 
-  filter(biosample1 %in% donor_communities) %>% 
+
+# Extract single donor OTUs from e0026
+donor_ASVs <- e0026_colonization %>% 
+  filter(biosample1 %in% donor_communities, passage == "8") %>% 
   select(biosample1, OTU) %>%
   distinct() %>%
   group_by(biosample1) %>%
   summarise(asvs = list(unique(OTU)), .groups = "drop") %>%
   deframe()
+
+
+
+# Infer mixture donor OTUs by adding together each pair:
+donor_combinations <- list(
+  "XBB-029+XKB-029" = c("XBB-029", "XKB-029"),
+  "XCB-029+XBB-029" = c("XCB-029", "XBB-029"),
+  "XDB-029+XCB-029" = c("XDB-029", "XCB-029"),
+  "XEB-029+XDB-029" = c("XEB-029", "XDB-029"),
+  "XFB-029+XEB-029" = c("XFB-029", "XEB-029"),
+  "XGB-029+XFB-029" = c("XGB-029", "XFB-029"),
+  "XHB-029+XGB-029" = c("XHB-029", "XGB-029"),
+  "XIB-029+XHB-029" = c("XIB-029", "XHB-029"),
+  "XJB-029+XIB-029" = c("XJB-029", "XIB-029")
+)
+
+
+
+extended_donor_ASVs <- donor_ASVs
+
+for (combo_name in names(donor_combinations)) {
+  component_donors <- donor_combinations[[combo_name]]
+  
+  # Combine OTUs using union() across selected donors
+  combined_otus <- Reduce(union, donor_ASVs[component_donors])
+  
+  # Add to the extended list
+  extended_donor_ASVs[[combo_name]] <- combined_otus
+
+}
+
+
+# Add b-mix info by computing the total asvs in the donor samples
+
+combined_asvs_list <- list()
+
+for (donor in names(extended_donor_ASVs)){
+  
+  donor_asvs <- extended_donor_ASVs[[donor]]
+
+  combined_asvs_list <- append(combined_asvs_list, donor_asvs) # get all OTUs present in the 10 donors??
+  combined_asvs_list <- Reduce(union, combined_asvs_list)
+  
+  extended_donor_ASVs[["b-mix"]] <- combined_asvs_list
+}
 
 
 ```
@@ -256,20 +301,40 @@ donor_ASVs_rep1 <- e0026_colonization %>%
 
 ### Define a function to categorize colonization
 
-this is how you get an overall intersection: global_intersection <- intersect(
-  unlist(list1),
-  unlist(list2)
-)
 
+```{r, }
 
-```{r}
+# This is what I have intuitively, but there 
 
-for (mix in names(mixture_ASVs_rep1)) {
-  otus <- mixture_ASVs_rep1[[mix]]
-  cat("Mixture:", mix, "\n")
-  print(otus)
+compute_colonization <- function(mixture_list, donor_list, recipient_list) {
+  colonization_results <- list()
+  
+  for (mix in names(mixture_list)) {
+    mix_asvs <- mixture_list[[mix]]
+    
+    for (donor in names(donor_list)) {
+      donor_asvs <- donor_list[[donor]]
+      
+      # Shared OTUs between mixture and donor
+      shared_otus <- intersect(mix_asvs, donor_asvs)
+      
+      for (recipient in names(recipient_list)) {
+        recipient_asvs <- recipient_list[[recipient]]
+        
+        # Flag colonization: 1 if OTU not in recipient, 0 if present
+        colonization_flag <- ifelse(!(shared_otus %in% recipient_asvs), 1, 0)
+        names(colonization_flag) <- shared_otus
+        
+        # Store in nested list
+        colonization_results[[mix]][[donor]][[recipient]] <- colonization_flag
+      }
+    }
+  }
+  
+  return(colonization_results)
 }
 
+colonization_results <- invisible(compute_colonization(mixture_ASVs_rep1, donor_ASVs, recipient_ASVs_rep1))
 
 
 ```
